# CoureWork_5_parser_hh_to_SQL

./: README.md  pyproject.toml
src/utils/: utils.py
